--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
           function_name: lambda-cd
-          source: adithyasiva
+          source: borrame-89b6d0b5-0d1a-4d27-baf7-5e57b1a72ebc
